feat: lift movement

--- a/src/index.html
+++ b/src/index.html
@@ -10,11 +10,11 @@
     <div id="form-container" class="form-container visible">
       <form id="form" class="form">
         <label for="floors">Floors (Max: 10)</label>
-        <input type="number" id="floors" name="floors" placeholder="5" />
+        <input type="number" id="floors" name="floors" placeholder="4" />
         <label for="lifts">Lifts (Max: 5)</label>
-        <input type="number" id="lifts" name="lifts" placeholder="3" />
+        <input type="number" id="lifts" name="lifts" placeholder="2" />
         <button type="submit" id="submit-button" class="submit-button">
-          Open Sesame!
+          Generate
         </button>
       </form>
     </div>
