fix: default value

--- a/src/index.html
+++ b/src/index.html
@@ -10,9 +10,9 @@
     <div id="form-container" class="form-container visible">
       <form id="form" class="form">
         <label for="floors">Floors (Max: 10)</label>
-        <input type="number" id="floors" name="floors" placeholder="4" />
+        <input type="number" id="floors" name="floors" value="4" />
         <label for="lifts">Lifts (Max: 5)</label>
-        <input type="number" id="lifts" name="lifts" placeholder="2" />
+        <input type="number" id="lifts" name="lifts" value="2" />
         <button type="submit" id="submit-button" class="submit-button">
           Generate
         </button>
